# mainrun

./: .gitignore  Taskfile.yml  improvement-plan.md  pyproject.toml
.devcontainer/: requirements.txt
docs/: TRAIN_PY_EXPLAINED.md
mainrun/: dropoutdecay.yaml  lrwarmup.yaml  optim.py  sweep.yaml  sweep_confirm.yaml  train.py
mainrun/eda/: charset.ipynb
mainrun/modules/: optim.py  token.py
mainrun/sweeps/: sweep.yaml
