[project]
name = "mainrun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets==4.0.0",
    "matplotlib==3.10.3",
    "structlog==24.4.0",
    "tokenizers==0.21.2",
    "torch==2.7.1",
    "tqdm==4.67.1",
    "wandb==0.28.0",
]
